syntax = "proto3";

package middlewareApi;

option go_package = "./proto/middlewareApi;middlewareApi";

service MiddlewareApi {
  rpc AddMiddleware(Request) returns (Response) {}
  rpc DeleteMiddleware(Request) returns (Response) {}
  rpc UpdateMiddleware(Request) returns (Response) {}
  rpc QueryMiddlewareByID(Request) returns (Response) {}
  rpc QueryAllMiddleware(Request) returns (Response) {}
  rpc QueryAllMiddlewareByTypeID(Request) returns (Response) {}

  rpc AddMiddlewareType(Request) returns (Response) {}
  rpc DeleteMiddlewareTypeByID(Request) returns (Response) {}
  rpc UpdateMiddlewareType(Request) returns (Response) {}
  rpc QueryMiddlewareTypeByID(Request) returns (Response) {}
  rpc QueryAllMiddlewareType(Request) returns (Response) {}
}

message Pair {
  string key = 1;
  repeated string values = 2;
}

message Request {
  string method = 1;
  string path = 2;
  map<string, Pair> header = 3;
  map<string, Pair> get = 4;
  map<string, Pair> post = 5;
  string body = 6;
  string url = 7;
}

message Response {
  int32 statusCode = 1;
  map<string, Pair> header = 2;
  string body = 3;
}